running all transition matrix simulations

--- a/markov-dev.ipynb
+++ b/markov-dev.ipynb
@@ -704,12 +704,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cf989d386834c749e7d5c554e3746d1",
+       "model_id": "e8bde1dcbea24191b87cc343e941bc00",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=2), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -718,7 +718,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e23f7648ac44d1e972fb231990bda0c",
+       "model_id": "b827c5ed36c24b8fa4078bcdedae01d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -737,7 +737,7 @@
     "sample_size = int(10e6)\n",
     "trial_size = 10\n",
     "\n",
-    "for row in tqdm_notebook(tmat_df.iloc[:2].itertuples(), total=2):\n",
+    "for row in tqdm_notebook(tmat_df.itertuples(), total=tmat_df.shape[0]):\n",
     "    transition_matrix = [row.OnOn, row.OnOff, row.OffOff, row.OffOn]\n",
     "    sim_matrix = generate_sim_data(sample_size, trial_size, transition_matrix)    \n",
     "    \n",
