swapped tqdm functions to tty command line output

--- a/markov-dev.ipynb
+++ b/markov-dev.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import scipy\n",
-    "from tqdm import tqdm_notebook, tnrange\n",
+    "from tqdm import tqdm_notebook, tnrange, trange, tqdm\n",
     "from itertools import cycle\n",
     "from collections import Counter\n",
     "\n",
@@ -288,7 +288,7 @@
     "\n",
     "            return np.random.binomial(1, p)\n",
     "        \n",
-    "    for i in tnrange(m_trials, leave=False):\n",
+    "    for i in trange(m_trials, leave=False):\n",
     "        sim_data = [1,1,1]\n",
     "        p = 0.5\n",
     "        \n",
@@ -352,7 +352,7 @@
     "sample_size = int(10e6)\n",
     "trial_size = 10\n",
     "\n",
-    "for row in tqdm_notebook(tmat_df.itertuples(), total=tmat_df.shape[0]):\n",
+    "for row in tqdm(tmat_df.itertuples(), total=tmat_df.shape[0]):\n",
     "    transition_matrix = [row.OnOn, row.OnOff, row.OffOff, row.OffOn]\n",
     "    sim_matrix = generate_sim_data(sample_size, trial_size, transition_matrix)    \n",
     "    \n",
