--- a/markov-dev.ipynb
+++ b/markov-dev.ipynb
@@ -487,6 +487,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### get all state lengths split 1/0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_split_state_length_list(data):\n",
+    "    '''\n",
+    "    takes data list ([1,1,0,1,0,0,...]) and returns separate\n",
+    "    numpy arrays of duration of consecutive bits ([13,245,2588,19,1056,...])\n",
+    "    for 1's and for 0's\n",
+    "    '''\n",
+    "    \n",
+    "    data = np.array(data)    \n",
+    "    \n",
+    "    state_lengths = np.diff(\n",
+    "        np.where(\n",
+    "            np.concatenate(\n",
+    "                ([data[0]],\n",
+    "                 data[:-1] != data[1:],\n",
+    "                 [0]\n",
+    "                )\n",
+    "            )\n",
+    "        )[0]\n",
+    "    )[::2]\n",
+    "    \n",
+    "    # split\n",
+    "    if real_data_array[0] == 0:\n",
+    "        data_0 = state_lengths[0::2]\n",
+    "        data_1 = state_lengths[1::2]\n",
+    "    else:\n",
+    "        data_0 = state_lengths[1::2]\n",
+    "        data_1 = state_lengths[0::2]\n",
+    "        \n",
+    "    return data_0, data_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_0, data_1 = get_split_state_length_list(real_data_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1200824"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_0.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1195592"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_1.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tt = get_split_state_length_list(real_data_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  13, 2105,   13, ...,   13,   19,   13], dtype=int64)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tt[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### compute stats"
    ]
   },
