added arg output_data to simulate_all_transition_matrices to save each sim_matrix as csv

--- a/wifi-traffic-analyzer.ipynb
+++ b/wifi-traffic-analyzer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +89,8 @@
     "        print(f'{self.mode} data options: ')\n",
     "        for key, path in self.path_dict.items():\n",
     "                print(f'\\tkey: {key}, path: {path}')\n",
+    "                \n",
+    "        self.sim_data_output_path = lambda tstep: Path(f'data/sim_data_{tstep}_microsec.csv')\n",
     "        \n",
     "        \n",
     "    \n",
@@ -248,7 +250,7 @@
     "        return sim_matrix\n",
     "    \n",
     "        \n",
-    "    def simulate_all_transition_matrices(self, n_samples=int(1e5), m_trials=10):\n",
+    "    def simulate_all_transition_matrices(self, n_samples=int(1e5), m_trials=10, output_data=False):        \n",
     "        start_time = time.time()\n",
     "\n",
     "        self.stats_dict = self.master_dictionary = {\n",
@@ -260,7 +262,15 @@
     "            transition_matrix = [row.OnOn, row.OnOff, row.OffOff, row.OffOn]\n",
     "            sim_matrix = self.generate_sim_data(n_samples, m_trials, transition_matrix)    \n",
     "            \n",
-    "            self.master_dictionary[row.timestep] = self.compute_sim_stats(sim_matrix)            \n",
+    "            self.master_dictionary[row.timestep] = self.compute_sim_stats(sim_matrix)\n",
+    "            \n",
+    "            # output data\n",
+    "            if output_data:\n",
+    "                np.savetxt(\n",
+    "                    self.sim_data_output_path(row.timestep),\n",
+    "                    sim_matrix,\n",
+    "                    delimiter=','\n",
+    "                )\n",
     "\n",
     "            \n",
     "        print(f'total elapsed time: {(time.time() - start_time)/60:0.2f} minutes')\n",
@@ -19410,12 +19420,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### sim data mode"
+    "### sim data mode\n",
+    "\n",
+    "to output data, specify `output_data=True` to `WTA_sim.simulate_all_transition_matrices()`\n",
+    "\n",
+    "data path format is:\n",
+    ">`Path(f'data/sim_data_{tstep}_microsec.csv')`\n",
+    "\n",
+    "where `tstep` is the timestep from the provided transition matrix data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -19436,13 +19453,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "862564bf25f14e9298a620588fb06892",
+       "model_id": "08c9bc1e2cd74492b5132f81f9464b6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -19668,13 +19685,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "total elapsed time: 0.71 minutes\n"
+      "total elapsed time: 0.02 minutes\n"
      ]
     }
    ],
    "source": [
     "WTA_sim.process_transition_matrices('tmat_2')\n",
-    "WTA_sim.simulate_all_transition_matrices(n_samples=100_000, m_trials=10)"
+    "WTA_sim.simulate_all_transition_matrices(n_samples=1000, m_trials=10, output_data=True)"
    ]
   },
   {
