upated with reference image

--- a/occupancy-prediction.ipynb
+++ b/occupancy-prediction.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# occupancy prediction"
+    "# occupancy prediction\n",
+    "\n",
+    "![img](data/IMG_6435.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "plan:\n",
+    "- split `real_data_array` into `timeunit` chunks\n",
+    "- compute transition matrix for each chunk\n",
+    "- simulate `timeunit` length of data using each transition matrix\n",
+    "- compare simulated data to each respective real data chunk\n",
+    "- make sure to normalize the *`timestep`* with `scipy.signal.decimate`\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -509,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -518,13 +534,20 @@
        "(1886, 4)"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tmat_df.loc[lambda x: [True if onon == 0 and onoff == 0 else False for onon, onoff in zip(x.onon, x.onoff)]].shape"
+    "tmat_df.loc[\n",
+    "    lambda x: [\n",
+    "        True \n",
+    "            if onon == 0 and onoff == 0 \n",
+    "            else False \n",
+    "        for onon, onoff in zip(x.onon, x.onoff)\n",
+    "    ]\n",
+    "].shape"
    ]
   },
   {
@@ -566,6 +589,27 @@
    "source": [
     "1886 /4043"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
