functionized remaining blocks, will cleanup and create sim function

--- a/occupancy-prediction.ipynb
+++ b/occupancy-prediction.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -126,6 +126,75 @@
    "source": [
     "WTA_real = WifiTrafficAnalyzer(mode='real', path_dict=real_data_path_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_and_reshape(WTA_real_instance, file_key, timeunit):\n",
+    "    WTA_real_instance.process_real_data(file_key)\n",
+    "    data_array = WTA_real_instance.real_data_array\n",
+    "\n",
+    "    print(f'generated real data array, size: {data_array.shape}')\n",
+    "    \n",
+    "    data_matrix = (\n",
+    "        data_array[\n",
+    "            :int(timeunit*np.round(len(data_array) / timeunit))\n",
+    "        ].reshape((-1, timeunit))\n",
+    "    )\n",
+    "    print(f'reshaped into {data_matrix.shape[0]} : {timeunit}µs chunks')\n",
+    "    \n",
+    "    return data_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b13ff7cc8474516a65283766330c703",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=5310), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "generated real data array, size: (40431970,)\n",
+      "reshaped into 4043 : 10000µs chunks\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_matrix = convert_and_reshape(WTA_real, 'real_2', timeunit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -370,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -386,6 +455,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
