updated row logic to make comparison alignment simpler

--- a/occupancy-prediction.ipynb
+++ b/occupancy-prediction.ipynb
@@ -68,8 +68,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#real_data_tstep = 1/20e6\n",
-    "\n",
     "timeunit = 10_000"
    ]
   },
@@ -498,6 +496,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 1., 0., 1., 1., 0., 0., 1., 1., 0., 1., 1., 0., 1., 1., 0.,\n",
+       "       1., 1., 0., 1., 1., 0., 1., 1., 0., 1., 1., 0., 0.])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim_data_matrix[0,:30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -516,184 +542,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_and_reshape(WTA_real_instance, file_key, timeunit):\n",
-    "    WTA_real_instance.process_real_data(file_key)\n",
-    "    data_array = WTA_real_instance.real_data_array\n",
-    "\n",
-    "    print(f'generated real data array, size: {data_array.shape}')\n",
-    "    \n",
-    "    data_matrix = (\n",
-    "        data_array[\n",
-    "            :int(timeunit*np.round(len(data_array) / timeunit))\n",
-    "        ].reshape((-1, timeunit))\n",
-    "    )\n",
-    "    print(f'reshaped into {data_matrix.shape[0]} : {timeunit}µs chunks')\n",
-    "    \n",
-    "    return data_matrix, file_key\n",
-    "\n",
-    "\n",
-    "\n",
-    "def compute_transition_matrix(row, timeunit):\n",
-    "    onon, onoff, offon, offoff = 0, 0, 0, 0\n",
-    "    \n",
-    "    for i in range(timeunit-1):    \n",
-    "        # if ON -> ON\n",
-    "        if row[i] == row[i+1] == 1:\n",
-    "            onon += 1\n",
-    "            \n",
-    "        # if ON -> OFF\n",
-    "        elif row[i] == 1 and row[i+1] == 0:\n",
-    "            onoff += 1\n",
-    "            \n",
-    "        # if OFF -> ON\n",
-    "        elif row[i] == 0 and row[i+1] == 1:\n",
-    "            offon += 1\n",
-    "            \n",
-    "        #if OFF -> OFF\n",
-    "        elif row[i] == row[i+1] == 0:\n",
-    "            offoff += 1\n",
-    "            \n",
-    "    try:\n",
-    "        p_onon = onon / (onon + onoff)\n",
-    "    except ZeroDivisionError:\n",
-    "        p_onon = 0\n",
-    "    \n",
-    "    try:\n",
-    "        p_offoff = offoff / (offoff + offon)\n",
-    "    except ZeroDivisionError:\n",
-    "        p_offoff = 0\n",
-    "        \n",
-    "    try:\n",
-    "        p_onoff = onoff / (onon + onoff)\n",
-    "    except ZeroDivisionError:\n",
-    "        p_onoff = 0\n",
-    "        \n",
-    "    try:\n",
-    "        p_offon = offon / (offoff + offon)\n",
-    "    except ZeroDivisionError:\n",
-    "        p_offon = 0\n",
-    "        \n",
-    "    \n",
-    "    return (p_onon, p_onoff, p_offon, p_offoff)\n",
-    "\n",
-    "\n",
-    "\n",
-    "def compute_tmats_and_load_df(data_matrix, timeunit, file_key):\n",
-    "    # compute all transition matrices\n",
-    "    tmat_array = [\n",
-    "        compute_transition_matrix(\n",
-    "            data_matrix[idx,:],\n",
-    "            timeunit\n",
-    "        )\n",
-    "        for idx in tnrange(data_matrix.shape[0])\n",
-    "    ]\n",
-    "    \n",
-    "    # load dataframe\n",
-    "    tmat_df = (\n",
-    "        pd\n",
-    "        .DataFrame(\n",
-    "            tmat_array, \n",
-    "            columns=['onon', 'onoff', 'offon', 'offoff']\n",
-    "        ).assign(\n",
-    "            timeunit = timeunit,\n",
-    "            source = file_key\n",
-    "        )\n",
-    "    )\n",
-    "    \n",
-    "    return tmat_df    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### execution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "WTA_real = WifiTrafficAnalyzer(mode='real', path_dict=real_data_path_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_matrix, file_key = convert_and_reshape(WTA_real, 'real_2', timeunit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmat_df = compute_tmats_and_load_df(data_matrix, timeunit, file_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmat_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## sim data dev"
-   ]
   },
   {
    "cell_type": "code",
@@ -766,17 +614,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "tmat_df.loc[\n",
     "    lambda x: [\n",
@@ -789,21 +628,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "tmat_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1886 /4043"
    ]
   },
   {
